--- a/server/.settings/org.eclipse.buildship.core.prefs
+++ b/server/.settings/org.eclipse.buildship.core.prefs
@@ -1,11 +1,11 @@
-arguments=--init-script /home/haydar/.config/Code/User/globalStorage/redhat.java/1.40.0/config_linux/org.eclipse.osgi/58/0/.cp/gradle/init/init.gradle --init-script /home/haydar/.config/Code/User/globalStorage/redhat.java/1.40.0/config_linux/org.eclipse.osgi/58/0/.cp/gradle/protobuf/init.gradle
-auto.sync=false
+arguments=--init-script C\:\\Users\\gluec\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.41.1\\config_win\\org.eclipse.osgi\\58\\0\\.cp\\gradle\\init\\init.gradle --init-script C\:\\Users\\gluec\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.41.1\\config_win\\org.eclipse.osgi\\58\\0\\.cp\\gradle\\protobuf\\init.gradle
+auto.sync=true
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=/usr/lib/jvm/temurin-17-jdk-amd64
+java.home=C\:/Program Files/Java/jdk-17.0.1
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
