--- a/client/packages/big-code-to-class-diagram/package.json
+++ b/client/packages/big-code-to-class-diagram/package.json
@@ -60,11 +60,14 @@
     "@eclipse-glsp/client": "*",
     "@eclipse-glsp/protocol": "*",
     "@eclipse-glsp/vscode-integration-webview": "*",
+    "antlr4": "^4.13.2",
+    "electron": "^33.0.0",
     "vscode-messenger-common": "^0.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "electron-rebuild": "^3.2.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
