--- a/client/packages/big-code-to-class-diagram/package.json
+++ b/client/packages/big-code-to-class-diagram/package.json
@@ -60,6 +60,8 @@
     "@eclipse-glsp/client": "*",
     "@eclipse-glsp/protocol": "*",
     "@eclipse-glsp/vscode-integration-webview": "*",
+    "tree-sitter": "^0.21.1",
+    "tree-sitter-java": "^0.23.5",
     "vscode-messenger-common": "^0.4.5"
   },
   "devDependencies": {
