--- a/server/model/.classpath
+++ b/server/model/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="build/main" path="src/main/java-gen/">
+	<classpathentry kind="src" output="build/main" path="src/main/java-gen">
 		<attributes>
 			<attribute name="gradle_scope" value="main"/>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
