--- a/client/packages/big-property-palette/package.json
+++ b/client/packages/big-property-palette/package.json
@@ -51,7 +51,7 @@
     "lint": "eslint -c ./eslint.config.js",
     "lint:fix": "npm run lint -- --fix",
     "tsc": "tsc",
-    "watch": "concurrently --kill-others 'npm run compile -- --watch' 'npm run bundle -- --watch'"
+    "watch": "concurrently --kill-others \"npm run compile -- --watch\" \"npm run bundle -- --watch\""
   },
   "dependencies": {
     "@borkdominik-biguml/big-components": "*",
