--- a/client/packages/big-code-to-class-diagram/package.json
+++ b/client/packages/big-code-to-class-diagram/package.json
@@ -51,7 +51,9 @@
     "lint": "eslint -c ./eslint.config.js",
     "lint:fix": "npm run lint -- --fix",
     "tsc": "tsc",
-    "watch": "concurrently --kill-others \"npm run compile -- --watch\" \"npm run bundle -- --watch\""
+    "watch": "concurrently --kill-others \"npm run compile -- --watch\" \"npm run bundle -- --watch\"",
+    "test": "jest simple-unit-tests.test.ts",
+    "test:watch": "jest simple-unit-tests.test.ts --watch"
   },
   "dependencies": {
     "@borkdominik-biguml/big-components": "*",
@@ -65,11 +67,14 @@
     "web-tree-sitter": "^0.25.3"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "jest": "^29.7.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "tree-sitter-cli": "^0.25.3"
+    "tree-sitter-cli": "^0.25.3",
+    "ts-jest": "^29.4.0"
   },
   "peerDependencies": {
     "inversify": "^6.1.3",
